<resources>
    <string name="app_name">BetterCallSaulApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>
    <string name="nav_title">Saul Goodman</string>
    <string name="nav_email">contact@bettercallsaul.com</string>
</resources>